[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/yozai-medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/big_button_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/yozai_font_24px.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/client/title_scene.gd" type="Script" id=4]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.625
anchor_top = 0.236111
anchor_right = 0.730985
anchor_bottom = 0.299393
margin_right = -7.66138
margin_bottom = 18.437
rect_min_size = Vector2( 128, 64 )
rect_rotation = -8.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "雀实"
text = "雀实"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="GameTilte" type="MarginContainer" parent="."]
anchor_left = 0.125
anchor_right = 0.875
anchor_bottom = 0.4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="GameTilte"]
margin_right = 960.0
margin_bottom = 288.0

[node name="Label" type="Label" parent="GameTilte/CenterContainer"]
margin_left = 272.0
margin_top = 105.0
margin_right = 687.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 1 )
text = "Mahjong Fruit"

[node name="GameStartButtons" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -468.0
margin_top = -420.0
margin_right = 468.0
margin_bottom = -60.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="GameStartButtons"]
margin_right = 936.0
margin_bottom = 360.0

[node name="HBoxContainer" type="HBoxContainer" parent="GameStartButtons/CenterContainer"]
margin_top = 60.0
margin_right = 936.0
margin_bottom = 300.0

[node name="Online" type="Button" parent="GameStartButtons/CenterContainer/HBoxContainer"]
margin_right = 240.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )
custom_fonts/font = ExtResource( 3 )
text = "在线游戏"

[node name="Gap" type="MarginContainer" parent="GameStartButtons/CenterContainer/HBoxContainer"]
margin_left = 244.0
margin_right = 344.0
margin_bottom = 240.0
rect_min_size = Vector2( 100, 0 )

[node name="Co-op" type="Button" parent="GameStartButtons/CenterContainer/HBoxContainer"]
margin_left = 348.0
margin_right = 588.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )
custom_fonts/font = ExtResource( 3 )
text = "局域网联机"

[node name="Gap2" type="MarginContainer" parent="GameStartButtons/CenterContainer/HBoxContainer"]
margin_left = 592.0
margin_right = 692.0
margin_bottom = 240.0
rect_min_size = Vector2( 100, 0 )

[node name="Local" type="Button" parent="GameStartButtons/CenterContainer/HBoxContainer"]
margin_left = 696.0
margin_right = 936.0
margin_bottom = 240.0
rect_min_size = Vector2( 240, 240 )
custom_fonts/font = ExtResource( 3 )
text = "本地游戏"

[node name="LocalGameButtons" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.34375
anchor_top = 0.555556
anchor_right = 0.65625
anchor_bottom = 0.833333
margin_top = -3.05176e-05
rect_min_size = Vector2( 400, 200 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="LocalGameButtons"]
margin_right = 400.0
margin_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="LocalGameButtons/CenterContainer"]
margin_left = 94.0
margin_top = 22.0
margin_right = 306.0
margin_bottom = 178.0

[node name="NewGame" type="Button" parent="LocalGameButtons/CenterContainer/VBoxContainer"]
margin_right = 212.0
margin_bottom = 36.0
text = "废话少说 先来一局"

[node name="Exam" type="Button" parent="LocalGameButtons/CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 212.0
margin_bottom = 76.0
text = "何切测验"

[node name="Debug" type="Button" parent="LocalGameButtons/CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 212.0
margin_bottom = 116.0
text = "调试算法"

[node name="Back" type="Button" parent="LocalGameButtons/CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 212.0
margin_bottom = 156.0
text = "返回"

[node name="Dialog" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Dialog"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.498039 )

[node name="AcceptDialog" type="AcceptDialog" parent="Dialog"]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 480, 200 )
popup_exclusive = true
window_title = "你想多了"
dialog_text = "不存在的"

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 40.0
text = "Version Info"

[connection signal="pressed" from="GameStartButtons/CenterContainer/HBoxContainer/Online" to="." method="_on_Online_pressed"]
[connection signal="pressed" from="GameStartButtons/CenterContainer/HBoxContainer/Co-op" to="." method="_on_Coop_pressed"]
[connection signal="pressed" from="GameStartButtons/CenterContainer/HBoxContainer/Local" to="." method="_on_Local_pressed"]
[connection signal="pressed" from="LocalGameButtons/CenterContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="LocalGameButtons/CenterContainer/VBoxContainer/Exam" to="." method="_on_Exam_pressed"]
[connection signal="pressed" from="LocalGameButtons/CenterContainer/VBoxContainer/Debug" to="." method="_on_Debug_pressed"]
[connection signal="pressed" from="LocalGameButtons/CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="popup_hide" from="Dialog/AcceptDialog" to="." method="_on_AcceptDialog_popup_hide"]
